# FFmpegForAndroid

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/io/github/zy3274311/ffmpegforandroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/io/github/zy3274311/ffmpegforandroid/: FFMediaPlayerActivity.java  MainActivity.java  SwresampleActivity.java
app/src/main/res/layout/: activity_ffmediaplayer.xml  activity_main.xml  activity_swresample.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/io/github/zy3274311/ffmpegforandroid/: ExampleUnitTest.java
distribution/ffmpeg/: android_build.sh
distribution/ffmpeg/arm64-v8a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
distribution/ffmpeg/armeabi-v7a/include/libavutil/: ffversion.h
distribution/ffmpeg/armeabi-v7a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
distribution/ffmpeg/x86-64/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
distribution/ffmpeg/x86/include/libavutil/: ffversion.h
distribution/ffmpeg/x86/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
distribution/ffmpeg/x86_64/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
gradle/wrapper/: gradle-wrapper.properties
media/: build.gradle
media/src/androidTest/java/com/example/media/: ExampleInstrumentedTest.java
media/src/main/: AndroidManifest.xml
media/src/main/cpp/: CMakeLists.txt  extractor.cpp  extractor.h  media_jni.cpp
media/src/main/java/com/example/media/: FFmpegMediaExtractor.java  FFmpegMediaMetadataRetriever.java  NativeMedia.java
nativeffmpeg/: build.gradle
nativeffmpeg/src/androidTest/java/io/github/zy3274311/nativeffmpeg/: ExampleInstrumentedTest.java
nativeffmpeg/src/main/: AndroidManifest.xml
nativeffmpeg/src/main/cpp/: CMakeLists.txt  avformat_jni.cpp  avformat_jni.h  avutil_jni.cpp  avutil_jni.h  log.h  mediaplayer.cpp  mediaplayer.h  mediaplayer_jni.cpp  mediaplayer_jni.h  ndk_log.h  player.cpp  player.h  player_jni.cpp  player_jni.h  register_jni.cpp  swresample_jni.cpp  swresample_jni.h
nativeffmpeg/src/main/cpp/android/: glenv.cpp  glenv.h  gles.cpp  gles.h  glrender.cpp  glrender.h
nativeffmpeg/src/main/cpp/demuxer/: demuxer.cpp  demuxer.h
nativeffmpeg/src/main/java/io/github/zy3274311/nativeffmpeg/: FFmpeg.java  Swresample.java
nativeffmpeg/src/main/java/io/github/zy3274311/nativeffmpeg/avformat/: AVFormat.java
nativeffmpeg/src/main/java/io/github/zy3274311/nativeffmpeg/avutil/: ChannelLayout.java  SampleFmt.java
nativeffmpeg/src/main/java/io/github/zy3274311/nativeffmpeg/player/: FFMediaPlayer.java
nativeffmpeg/src/main/java/io/github/zy3274311/nativeffmpeg/swresample/: Swresample.java
nativeffmpeg/src/test/java/io/github/zy3274311/nativeffmpeg/: ExampleUnitTest.java
